--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
     "@mui/material-nextjs": "^6.1.3",
+    "@sendgrid/mail": "^8.1.4",
     "@types/leaflet": "^1.9.12",
     "leaflet": "^1.9.4",
     "next": "14.2.15",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
