--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material-nextjs": "^6.1.3",
     "@sendgrid/mail": "^8.1.4",
     "@types/leaflet": "^1.9.12",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "next": "14.2.15",
     "next-pwa": "^5.6.0",
@@ -27,6 +28,7 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
