--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,11 @@ mkcert_development_CA_*
 # pwa
 sw.*
 workbox-*
+node_modules/
+
+# playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/tests/.test-results/
