--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material-nextjs": "^6.1.3",
     "@sendgrid/mail": "^8.1.4",
     "@types/leaflet": "^1.9.12",
+    "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "next": "14.2.15",
