--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test-server": "next dev --port=3000",
-    "tests": "playwright test"
+    "test:e2e": "playwright test",
+    "test-server": "cross-env TEST_ENV=true NODE_ENV=test next dev"
   },
   "type": "module",
   "dependencies": {
@@ -18,8 +18,10 @@
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
     "@mui/material-nextjs": "^6.1.3",
+    "@next/env": "^15.1.0",
     "@sendgrid/mail": "^8.1.4",
     "@types/leaflet": "^1.9.12",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
