Mise en place version Beta (#1)
* create components for ModalRequestActivty and page for acceptation request activity

* send email for accept a request or email for refused a request, add system for show alert in app

* add dynamic url with jwt and add icons in btns

* split home page with BoxActicityComponent

* add process for installation pwa

* add playwright with a test and fix pwa config

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,16 @@ yarn-error.log*
 next-env.d.ts
 .vscode
 /certificates/
+mkcert_development_CA_*
 
 # pwa
 sw.*
 workbox-*
+node_modules/
+
+# playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/tests/.test-results/
