--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --experimental-https --experimental-https-key ./certificates/key.pem --experimental-https-cert ./certificates/cert.pem",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:e2e": "playwright test",
+    "test-server": "cross-env TEST_ENV=true NODE_ENV=test next dev"
   },
   "type": "module",
   "dependencies": {
@@ -16,15 +18,23 @@
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
     "@mui/material-nextjs": "^6.1.3",
+    "@next/env": "^15.1.0",
+    "@sendgrid/mail": "^8.1.4",
     "@types/leaflet": "^1.9.12",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "next": "14.2.15",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
