--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/leaflet": "^1.9.12",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
+    "haversine": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "next": "14.2.15",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
+    "@types/haversine": "^1.1.8",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
