Changement d'API et ajout d'autre types d'activités (#3)
* create componets for ModalRequestActivty and page for acceptation request activity

* send email for accept a request or email for refused a request, add system for show alert in app

* add dynamic url with jwt and add icons in btns

* split home page with BoxActicityComponent

* add process for installation pwa

* add playwright with a tests and fix pwa config

* fix CI

* Add dotenv to fix CI

* update npm script fix test-server

* fix job test CI

* Fix local date and url genereted for share invitation

* Fix EventCalendarService

* update api yelp-> google api for finds a places

* Update all components named restaurants in places and create a one component Places for pages /restaurants, /bars, /museums

* Add a backspace for empty an input search and move more classes in directory

* Add cache in Place API

* Add text when places are empty

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-API_KEY_YELP=""
 API_KEY_SEND_GRID=""
 SEND_GRID_TEMPLATE_ID=""
 SEND_GRID_TEMPLATE_REFUSED_ID=""
 SEND_EMAIL=""
 JWT_KEY=""
+GOOGLE_PLACES_API_KEY=""
+GOOGLE_PLACE_API=""
