--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
-    "uuid": "^11.0.3"
+    "swr": "^2.3.3",
+    "uuid": "^11.0.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
