--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
     "@mui/material-nextjs": "^6.1.3",
@@ -30,6 +31,7 @@
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-leaflet": "^4.2.1",
     "swr": "^2.3.3",
     "uuid": "^11.0.3",
