--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-leaflet": "^4.2.1",
     "swr": "^2.3.3",
     "uuid": "^11.0.3",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
