--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test:jest": "yarn jest --config=jest.config.ts",
     "test:e2e": "playwright test",
     "test-server": "cross-env TEST_ENV=true NODE_ENV=test next dev"
   },
@@ -21,6 +22,11 @@
     "@mui/material-nextjs": "^6.1.3",
     "@next/env": "^15.1.0",
     "@sendgrid/mail": "^8.1.4",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/leaflet": "^1.9.12",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
@@ -35,19 +41,24 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-leaflet": "^4.2.1",
     "swr": "^2.3.3",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "uuid": "^11.0.3",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.27.0",
     "@playwright/test": "^1.49.0",
     "@types/haversine": "^1.1.8",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "typescript": "^5"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "typescript": "^5.8.3"
   }
 }
