--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint",
     "test:jest": "yarn jest --config=jest.config.ts",
     "test:e2e": "playwright test",
-    "test-server": "cross-env TEST_ENV=true NODE_ENV=test next dev"
+    "test-server": "cross-env TEST_ENV=true NODE_ENV=test next dev",
+    "tsc": "tsc --noEmit",
+    "prettier": "prettier --check ."
+  },
+  "resolutions": {
+    "strip-ansi": "^6.0.1"
   },
   "type": "module",
   "dependencies": {
@@ -55,10 +60,11 @@
     "@types/node": "^20",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
-    "eslint": "^8",
+    "eslint": "^9.25.0",
     "eslint-config-next": "14.2.15",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.5.3",
     "typescript": "^5.8.3"
   }
 }
