--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,9 +1,9 @@
 name: Code quality
 on:
   push:
-    branches: [ dev ]
+    branches: [dev]
   pull_request:
-    branches: [ dev ]
+    branches: [dev]
 
 jobs:
   quality-check:
@@ -40,4 +40,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
-          eslint_flags: "src/ --ext .ts,.tsx"
+          eslint_flags: 'src/ --ext .ts,.tsx'
