--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
     "test:e2e": "playwright test",
     "test-server": "cross-env TEST_ENV=true NODE_ENV=test next dev",
     "tsc": "tsc --noEmit",
-    "prettier": "prettier --check ."
+    "prettier": "prettier --check .",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{css,json,md}": [
+      "prettier --write"
+    ]
   },
   "resolutions": {
     "strip-ansi": "^6.0.1"
@@ -26,6 +36,7 @@
     "@mui/material": "^6.1.3",
     "@mui/material-nextjs": "^6.1.3",
     "@next/env": "^15.1.0",
+    "@next/eslint-plugin-next": "^15.3.1",
     "@sendgrid/mail": "^8.1.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -35,9 +46,14 @@
     "@types/leaflet": "^1.9.12",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "haversine": "^1.1.1",
+    "husky": "^9.1.7",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
+    "lint-staged": "^15.5.1",
     "next": "14.2.15",
     "next-pwa": "^5.6.0",
     "react": "^18",
