fix comment reviewdog

--- a/.github/actions/set-env-vars/action.yml
+++ b/.github/actions/set-env-vars/action.yml
@@ -7,7 +7,7 @@ inputs:
     required: true
 
 runs:
-  using: "composite"
+  using: 'composite'
   steps:
     - name: Replace vars in .env and .env.test
       shell: bash
