--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -28,8 +28,13 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
 
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v44
+
       - name: Run Prettier
-        run: yarn prettier --check .
+        if: steps.changed-files.outputs.all_changed_files != ''
+        run: yarn prettier --check ${{ steps.changed-files.outputs.all_changed_files }}
         continue-on-error: true
       - uses: EPMatt/reviewdog-action-prettier@v1
         with:
