Mise en place de la section films (#5)
* creation request activity for movies. Creata api movies, page, interfaces,

* add informations providers in movies

* add test movies

* add jest and tests components + services

* Udpate jest.yml

* correction moives.spec test and add a quality job CI

* add husky

* fix comment reviewdog

* update quality job

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,6 +15,10 @@ jobs:
         node-version: lts/*
     - name: Install dependencies
       run: yarn
+    - uses: ./.github/actions/set-env-vars
+      with:
+        TMDB_API: ${{ secrets.TMDB_API }}
+        TMDB_API_KEY: ${{ secrets.TMDB_API_KEY }}
     - name: Install Playwright Browsers
       run: yarn playwright install --with-deps
     - name: Check build before deploy in production
