--- a/package.json
+++ b/package.json
@@ -1,14 +1,30 @@
 {
   "name": "date-finder",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --experimental-https --experimental-https-key ./certificates/key.pem --experimental-https-cert ./certificates/cert.pem",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test:jest": "yarn jest --config=jest.config.ts",
     "test:e2e": "playwright test",
-    "test-server": "cross-env TEST_ENV=true NODE_ENV=test next dev"
+    "test-server": "cross-env TEST_ENV=true NODE_ENV=test next dev",
+    "tsc": "tsc --noEmit",
+    "prettier": "prettier --check .",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{css,json,md}": [
+      "prettier --write"
+    ]
+  },
+  "resolutions": {
+    "strip-ansi": "^6.0.1"
   },
   "type": "module",
   "dependencies": {
@@ -20,33 +36,51 @@
     "@mui/material": "^6.1.3",
     "@mui/material-nextjs": "^6.1.3",
     "@next/env": "^15.1.0",
+    "@next/eslint-plugin-next": "^15.3.1",
     "@sendgrid/mail": "^8.1.4",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/leaflet": "^1.9.12",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "haversine": "^1.1.1",
+    "husky": "^9.1.7",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
+    "lint-staged": "^15.5.1",
     "next": "14.2.15",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-leaflet": "^4.2.1",
     "swr": "^2.3.3",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "uuid": "^11.0.3",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.27.0",
     "@playwright/test": "^1.49.0",
     "@types/haversine": "^1.1.8",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
+    "eslint": "^9.25.0",
     "eslint-config-next": "14.2.15",
-    "typescript": "^5"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3"
   }
 }
