--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "types": ["jest", "node"],
     "incremental": true,
     "plugins": [
       {
@@ -19,8 +20,16 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
-    },
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "jest.setup.ts",
+    "jest.config.ts",
+    "prettier.config.mjs"
+  ],
   "exclude": ["node_modules"]
 }
