--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -6,7 +6,7 @@
   "lang": "fr-FR",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
