--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           TMDB_API: ${{ secrets.TMDB_API }}
           TMDB_API_KEY: ${{ secrets.TMDB_API_KEY }}
+          JWT_KEY: ${{ secrets.JWT_KEY  }}
       - name: Run jest tests
         run: yarn test:jest
       - uses: actions/upload-artifact@v4
