add assertion in test movies for button scroll to up

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
       "prettier --write",
       "eslint --fix"
     ],
-    "*.{css,json,md}": [
+    "*.{css,json,md,yml}": [
       "prettier --write"
     ]
   },
